--- a/style.css
+++ b/style.css
@@ -10,9 +10,39 @@ body {
   height: 100%;
 }
 
-button:active {
-  background-color: rgb(91, 91, 91);
-  width: auto;
-  height: auto;
+/* button:hover {
+  background-color: rgb(173, 173, 173);
+} */
+
+button {
+  position: relative;
+  overflow: hidden;
+}
+
+.ripple {
+  position: absolute;
+  background-color: rgba(100, 100, 100, 0.3);
   border-radius: 50%;
+  transform: scale(0);
+  animation: ripple-animation 600ms ease-out;
+  pointer-events: none;
+  z-index: 1;
+}
+
+@keyframes gradientScrollLeftToRight {
+  0% {
+    background-position: 200% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient-ltr {
+  background: linear-gradient(90deg, #000000, #e5e7eb, #ffffff, #000000);
+  background-size: 200% 100%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  animation: gradientScrollLeftToRight 5s linear infinite;
 }
